--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sn-gruvbox-dark-theme",
+  "name": "TROM-Dark",
   "version": "0.0.16",
   "main": "dist/dist.css",
   "devDependencies": {
